syntax = "proto3";

option go_package = "go-grpc-sample/proto/book";

package book;

message Meta {
    int32 code = 1;
    string message = 2;
}

message BookDBResponse {
    string id = 1;
    string title = 2;
    string author = 3;
    string description = 4;
    int64 created_at = 5;
    string created_by = 6;
    int64 updated_at = 7;
    string updated_by = 8;
}

message InsertBookRequest {
    string title = 1;
    string author = 2;
    string description = 3;
}

message InsertBookResponse {
    Meta meta = 1;
    BookDBResponse data = 2;
}

message GetListBooksRequest {
    string title = 1;
    string author = 2;
}

message GetListBooksResponse {
    Meta meta = 1;
    repeated BookDBResponse data = 2;
}

message GetBookByIdRequest {
    string id = 1;
}

message GetBookByIdResponse {
    Meta meta = 1;
    BookDBResponse data = 2;
}

message UpdateBookByIdRequest {
    string id = 1;
    string title = 2;
    string author = 3;
    string description = 4;
}

message UpdateBookByIdResponse {
    Meta meta = 1;
    BookDBResponse data = 2;
}

message DeleteBookByIdRequest {
    string id = 1;
}

message DeleteBookByIdResponse {
    Meta meta = 1;
}

// Service of gRPC provide some service method
service BookGapi {
    rpc InsertBook(InsertBookRequest) returns (InsertBookResponse) {}
    rpc GetListBooks(GetListBooksRequest) returns (GetListBooksResponse) {}
    rpc GetBookById(GetBookByIdRequest) returns (GetBookByIdResponse) {}
    rpc UpdateBookById(UpdateBookByIdRequest) returns (UpdateBookByIdResponse) {}
    rpc DeleteBookById(DeleteBookByIdRequest) returns (DeleteBookByIdResponse) {}
}